[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
nom = "7.1.3"
num = "0.4.1"
rayon = "1.8.0"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "aoc_bench"
harness = false
